--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </tbody>
     </table>
 
-    <script>
+    <script type="text/javascript">
         // JavaScript function to initiate the download
         function downloadFilepdf(fileUrl) {
             // Construct a temporary anchor element
