--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <table border="1">
         <thead>
             <tr>
+                <h1 id="title">Hello from web</h1>
                 <th>File type</th>
                 <th>Download Button</th>
             </tr>
@@ -56,6 +57,15 @@
             // Construct a temporary anchor element
             JavascriptChannel.postMessage('https://upload.wikimedia.org/wikipedia/commons/6/60/The_Organ_at_Arches_National_Park_Utah_Corrected.jpg');
 
+        }
+
+        function fromFlutter(newTitle) {
+            document.getElementById("title").innerHTML = newTitle;
+            sendBack();
+        }
+
+        function sendBack() {
+            messageHandler.postMessage("Hello from JS");
         }
     </script>
 </body>
