--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         }
 
-        function fromFlutter(newTitle) {
+        function fromFlutter(token) {
             document.getElementById("title").innerHTML = newTitle;
             sendBack();
         }
