--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         function fromFlutter(token) {
-            document.getElementById("title").innerHTML = newTitle;
+            document.getElementById("title").innerHTML = token;
             sendBack();
         }
 
