--- a/index.html
+++ b/index.html
@@ -61,12 +61,19 @@
 
         function fromFlutter(token) {
             document.getElementById("title").innerHTML = token;
-            sendBack();
+            sendBack(token);
         }
 
-        function sendBack() {
-            messageHandler.postMessage("Hello from JS");
+        function sendBack(token) {
+            messageHandler.postMessage(token);
         }
+
+        function autoLogin(token) {
+            document.getElementById("title").innerHTML = token;
+            sendBack(token);
+        }
+
+
     </script>
 </body>
 
