--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
 
         function sendBack(token) {
-            messageHandler.postMessage(token);
+            requestWorkPermitSection60_2_EwpScriptChannel.postMessage(token);
         }
 
         function autoLogin(token) {
