--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>SC Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to Our Simple Website</h1>
+            <h1>Welcome to SC Website</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
