--- a/policy.html
+++ b/policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy - Comment Sentiment Analysis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,21 +22,58 @@
         <main>
             <section>
                 <h2>Introduction</h2>
-                <p>This privacy policy explains how we collect, use, and protect your personal data.</p>
+                <p>This privacy policy explains how we collect, use, and protect your personal data, specifically related to our comment sentiment analysis services.</p>
 
                 <h2>Data Collection</h2>
-                <p>We may collect personal information such as your name and email when you sign up on our website.</p>
+                <p>We collect the following types of data:
+                    <ul>
+                        <li>Comments submitted by users for analysis</li>
+                        <li>Metadata related to comments, such as timestamps and user IDs (if applicable)</li>
+                        <li>Personal information (e.g., name, email) if voluntarily provided during account registration or feedback submission</li>
+                    </ul>
+                </p>
 
                 <h2>Data Usage</h2>
-                <p>Your data will be used only to provide the services and communication you have requested.</p>
+                <p>We use the collected data for the following purposes:
+                    <ul>
+                        <li>Analyzing sentiment to improve our algorithms and services</li>
+                        <li>Providing insights and reports based on comment analysis</li>
+                        <li>Enhancing user experience and service personalization</li>
+                    </ul>
+                    Your data will not be sold, shared, or used for purposes beyond those stated without your explicit consent.
+                </p>
 
-                <h2>Security</h2>
-                <p>We implement security measures to protect your personal data from unauthorized access.</p>
+                <h2>Data Sharing</h2>
+                <p>We do not share your personal data with third parties, except:
+                    <ul>
+                        <li>When required by law or legal processes</li>
+                        <li>With trusted service providers who assist in data processing, under strict confidentiality agreements</li>
+                    </ul>
+                </p>
+
+                <h2>Data Security</h2>
+                <p>We implement industry-standard security measures to protect your personal data from unauthorized access, disclosure, alteration, or destruction. These measures include encryption, secure servers, and regular security audits.</p>
+
+                <h2>User Rights</h2>
+                <p>You have the right to:
+                    <ul>
+                        <li>Access and review your personal data</li>
+                        <li>Request corrections or deletion of your data</li>
+                        <li>Withdraw consent for data processing at any time</li>
+                    </ul>
+                    To exercise these rights, please contact us at [insert contact email].
+                </p>
+
+                <h2>Policy Updates</h2>
+                <p>We may update this privacy policy periodically. Any changes will be posted on this page with an updated effective date. We encourage you to review this policy regularly.</p>
+
+                <h2>Contact Us</h2>
+                <p>If you have any questions or concerns about this privacy policy, please contact us at [insert contact email].</p>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2025 Simple Website. All rights reserved.</p>
+            <p>&copy; 2025 Comment Sentiment Analysis Platform. All rights reserved.</p>
         </footer>
     </div>
 </body>
