--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service</title>
+    <title>Terms of Service - Comment Sentiment Analysis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,18 +22,45 @@
         <main>
             <section>
                 <h2>Introduction</h2>
-                <p>By using our website, you agree to the following terms of service.</p>
+                <p>By accessing and using our comment sentiment analysis services, you agree to be bound by these Terms of Service. Please read them carefully.</p>
 
                 <h2>Use of Service</h2>
-                <p>You are responsible for ensuring that the services are used in compliance with our terms and applicable laws.</p>
+                <p>You agree to use our services only for lawful purposes and in accordance with these terms. You are responsible for any content you submit and must ensure it does not violate any applicable laws or third-party rights.</p>
+
+                <h2>Account Responsibilities</h2>
+                <p>If you create an account, you are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account. Notify us immediately of any unauthorized use of your account.</p>
+
+                <h2>Prohibited Activities</h2>
+                <p>When using our services, you agree not to:
+                    <ul>
+                        <li>Submit content that is illegal, harmful, or violates the rights of others</li>
+                        <li>Interfere with or disrupt the integrity or performance of our services</li>
+                        <li>Attempt to gain unauthorized access to any part of the service or its related systems</li>
+                    </ul>
+                </p>
+
+                <h2>Intellectual Property</h2>
+                <p>All content and materials provided through our services, including but not limited to text, graphics, logos, and software, are the property of our platform or its licensors and are protected by intellectual property laws.</p>
 
                 <h2>Limitation of Liability</h2>
-                <p>We are not liable for any damages arising from the use of our website.</p>
+                <p>We are not liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of our services. Our total liability for any claim related to these terms shall not exceed the amount you paid for the service, if any.</p>
+
+                <h2>Termination</h2>
+                <p>We reserve the right to suspend or terminate your access to our services at any time, without prior notice, if we believe you have violated these terms.</p>
+
+                <h2>Modifications to Terms</h2>
+                <p>We may update these Terms of Service from time to time. Any changes will be effective immediately upon posting the updated terms on our website. Your continued use of the service after changes constitute acceptance of the new terms.</p>
+
+                <h2>Governing Law</h2>
+                <p>These terms shall be governed by and construed in accordance with the laws of [insert jurisdiction], without regard to its conflict of law principles.</p>
+
+                <h2>Contact Us</h2>
+                <p>If you have any questions about these Terms of Service, please contact us at [insert contact email].</p>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2025 Simple Website. All rights reserved.</p>
+            <p>&copy; 2025 Comment Sentiment Analysis Platform. All rights reserved.</p>
         </footer>
     </div>
 </body>
