--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SC Website</title>
+    <title>SC Website - Comment Sentiment Analysis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,14 +20,34 @@
         </header>
 
         <main>
-            <section>
+            <section class="hero">
+                <h2>Analyze Comments, Understand Sentiment</h2>
+                <p>SC Website helps you uncover the emotions behind user comments with our advanced sentiment analysis tools.</p>
+                <a href="#features" class="btn">Learn More</a>
+            </section>
+
+            <section id="features">
+                <h2>Key Features</h2>
+                <ul>
+                    <li><strong>Real-Time Sentiment Analysis:</strong> Get immediate feedback on comment sentiment.</li>
+                    <li><strong>Data Visualization:</strong> Understand trends with interactive charts and graphs.</li>
+                    <li><strong>Easy Integration:</strong> Seamlessly add sentiment analysis to your platforms.</li>
+                </ul>
+            </section>
+
+            <section id="about">
                 <h2>About Us</h2>
-                <p>This is a simple website that showcases how to include privacy policies and terms of service.</p>
+                <p>SC Website is dedicated to helping businesses and individuals make sense of user feedback through powerful sentiment analysis technology.</p>
+            </section>
+
+            <section id="contact">
+                <h2>Contact Us</h2>
+                <p>Have questions? Reach out to us at <a href="mailto:support@scwebsite.com">support@scwebsite.com</a>.</p>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2025 Simple Website. All rights reserved.</p>
+            <p>&copy; 2025 SC Website. All rights reserved.</p>
         </footer>
     </div>
 </body>
