--- a/index.html
+++ b/index.html
@@ -3,52 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SC Website - Comment Sentiment Analysis</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Valentine's Surprise</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: pink;
+            flex-direction: column;
+        }
+        #gift-box {
+            width: 100px;
+            height: 100px;
+            background: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            font-size: 20px;
+            color: white;
+        }
+        #surprise {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+        }
+        img {
+            width: 200px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Welcome to SC Website</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="policy.html">Privacy Policy</a></li>
-                    <li><a href="terms.html">Terms of Service</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
-            <section class="hero">
-                <h2>Analyze Comments, Understand Sentiment</h2>
-                <p>SC Website helps you uncover the emotions behind user comments with our advanced sentiment analysis tools.</p>
-                <a href="#features" class="btn">Learn More</a>
-            </section>
-
-            <section id="features">
-                <h2>Key Features</h2>
-                <ul>
-                    <li><strong>Real-Time Sentiment Analysis:</strong> Get immediate feedback on comment sentiment.</li>
-                    <li><strong>Data Visualization:</strong> Understand trends with interactive charts and graphs.</li>
-                    <li><strong>Easy Integration:</strong> Seamlessly add sentiment analysis to your platforms.</li>
-                </ul>
-            </section>
-
-            <section id="about">
-                <h2>About Us</h2>
-                <p>SC Website is dedicated to helping businesses and individuals make sense of user feedback through powerful sentiment analysis technology.</p>
-            </section>
-
-            <section id="contact">
-                <h2>Contact Us</h2>
-                <p>Have questions? Reach out to us at <a href="mailto:support@scwebsite.com">support@scwebsite.com</a>.</p>
-            </section>
-        </main>
-
-        <footer>
-            <p>&copy; 2025 SC Website. All rights reserved.</p>
-        </footer>
+    <div id="gift-box" onclick="showSurprise()">🎁</div>
+    <div id="surprise">
+        <img src="https://source.unsplash.com/200x200/?love" alt="Love">
+        <p>Happy Valentine's Day! ❤️</p>
+        <audio id="valentine-music" src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" controls autoplay></audio>
     </div>
+
+    <script>
+        function showSurprise() {
+            document.getElementById('gift-box').style.display = 'none';
+            document.getElementById('surprise').style.display = 'block';
+            document.getElementById('valentine-music').play();
+        }
+    </script>
 </body>
 </html>
