--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <div id="gift-box" onclick="showSurprise()">🎁</div>
     <div id="surprise">
-        <img src="https://drive.google.com/uc?export=download&id=1zfaDtHBfoSB67VoTWwT0wx8tt_AURj0o" alt="Love">
+        <img src="https://www.dropbox.com/scl/fi/m1cbu1ifkheaf96i4vpci/Messenger_creation_48EC10A7-52C3-4804-B53D-0502C7642C50.jpeg?rlkey=d82e1qlfdjimmj709y0jqt5yl&st=w3926nip&dl=0" alt="Love">
         <p>สุขสันต์วันวาเลนไทน์น่ะตัว! ❤️</p>
         <audio id="valentine-music" controls></audio>
     </div>
@@ -51,7 +51,7 @@
             document.getElementById('surprise').style.display = 'block';
 
             let audio = document.getElementById('valentine-music');
-            audio.src = "https://drive.google.com/uc?export=download&id=1wBkJc5a-bsOy8lhV4qch3J_nOLH_NFcY";
+            audio.src = "https://www.dropbox.com/scl/fi/10egxq5bnt8ry1wkbyzx9/Malcolm-Todd-Chest-Pain-I-Love-Lyrics-ezmp3.cc.mp3?rlkey=r36011lgj94i130rr21c2b6od&dl=1";
             audio.currentTime = 137; // Start at 137s
             audio.play();
 
