--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="surprise">
         <img src="https://www.dropbox.com/scl/fi/m1cbu1ifkheaf96i4vpci/Messenger_creation_48EC10A7-52C3-4804-B53D-0502C7642C50.jpeg?rlkey=d82e1qlfdjimmj709y0jqt5yl&dl=1" alt="Love">
         <p>สุขสันต์วันวาเลนไทน์น่ะตัว! ❤️</p>
-        <audio id="valentine-music" controls></audio>
+        <audio id="valentine-music" ></audio>
     </div>
 
     <script>
